--- a/filtereddns.html
+++ b/filtereddns.html
@@ -14,25 +14,25 @@
     <title>sainternet.xyz</title>
 
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" type="image/png" sizes="256x256" href="/resources/icons/android-chrome-256x256.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/resources/icons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-256x256.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-192x192.png">
 
-    <link rel="icon" type="image/png" sizes="48x48" href="/resources/icons/favicon-48x48.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/resources/icons/favicon-16x16.png">
-    <link rel="icon" sizes="any" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16x16.png">
+    <link rel="icon" sizes="any" href="favicon.ico">
 
     <link rel="canonical" href="https://sainternet.xyz/filtereddns.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
-    <link rel="preload" as="style" href="/resources/stylesheets/material.orange-red.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/material.orange-red.min.css">
-    <link rel="preload" as="style" href="/resources/stylesheets/sainternet.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/sainternet.min.css">
-    <link rel="preload" as="style" href="/resources/stylesheets/ribbons.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/ribbons.min.css">
-    <link rel="preload" as="style" href="/resources/stylesheets/button_home.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/button_home.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/material.orange-red.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/material.orange-red.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/sainternet.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/sainternet.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/ribbons.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/button_home.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/button_home.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,28 +41,28 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link rel="preload" as="style" href="/resources/fontawesome/css/fontawesome.min.css">
-    <link rel="stylesheet" href="/resources/fontawesome/css/fontawesome.min.css">
-    <link rel="preload" as="style" href="/resources/fontawesome/css/solid.min.css">
-    <link rel="stylesheet" href="/resources/fontawesome/css/solid.min.css">
-    <link rel="preload" as="style" href="/resources/fontawesome/css/brands.min.css">
-    <link rel="stylesheet" href="/resources/fontawesome/css/brands.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome/css/fontawesome.min.css">
+    <link rel="stylesheet" href="resources/fontawesome/css/fontawesome.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome/css/solid.min.css">
+    <link rel="stylesheet" href="resources/fontawesome/css/solid.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome/css/brands.min.css">
+    <link rel="stylesheet" href="resources/fontawesome/css/brands.min.css">
 
-    <script type="text/javascript" src="/resources/javascript/material.min.js" async></script>
-    <script type="text/javascript" src="/resources/javascript/sainternet.min.js" async></script>
+    <script type="text/javascript" src="resources/javascript/material.min.js" async></script>
+    <script type="text/javascript" src="resources/javascript/sainternet.min.js" async></script>
 
-    <link rel="prefetch" href="/frequentlyaskedquestions.html" as="document">
-    <link rel="prerender" href="/frequentlyaskedquestions.html">
-    <link rel="prefetch" href="/connecttosainternet.html" as="document">
-    <link rel="prerender" href="/connecttosainternet.html">
-    <link rel="prefetch" href="/portsandprotocols.html" as="document">
-    <link rel="prerender" href="/portsandprotocols.html">
-    <link rel="prefetch" href="/technologies.html" as="document">
-    <link rel="prerender" href="/technologies.html">
-    <link rel="prefetch" href="/testsainternet.html" as="document">
-    <link rel="prerender" href="/testsainternet.html">
-    <link rel="prefetch" href="/reportaproblem.html" as="document">
-    <link rel="prerender" href="/reportaproblem.html">
+    <link rel="prefetch" href="frequentlyaskedquestions.html" as="document">
+    <link rel="prerender" href="frequentlyaskedquestions.html">
+    <link rel="prefetch" href="connecttosainternet.html" as="document">
+    <link rel="prerender" href="connecttosainternet.html">
+    <link rel="prefetch" href="portsandprotocols.html" as="document">
+    <link rel="prerender" href="portsandprotocols.html">
+    <link rel="prefetch" href="technologies.html" as="document">
+    <link rel="prerender" href="technologies.html">
+    <link rel="prefetch" href="testsainternet.html" as="document">
+    <link rel="prerender" href="testsainternet.html">
+    <link rel="prefetch" href="reportaproblem.html" as="document">
+    <link rel="prerender" href="reportaproblem.html">
 
     <link rel="dns-prefetch" href="wikipedia.org">
     <link rel="dns-prefetch" href="support.mozilla.org">
@@ -78,28 +78,28 @@
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="embiggen mdl-navigation__link" href="/index.html">Home</a>
-            <a class="embiggen mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
+            <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
+            <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
             <a class="embiggen mdl-navigation__link" href="#filtereddns"><b>Filtered DNS</b></a>
-            <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="embiggen mdl-navigation__link" href="/projects.html">Popular Projects</a>
+            <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
+            <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer">
         <span class="embiggen mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
-          <a class="embiggen mdl-navigation__link" href="/index.html">Home</a>
-          <a class="embiggen mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
+          <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
+          <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="#filtereddns"><b>Filtered DNS</b></a>
-          <a class="embiggen mdl-navigation__link" href="/frequentlyaskedquestions.html"> - FAQ</a>
-          <a class="embiggen mdl-navigation__link" href="/connecttosainternet.html"> - Connect to Sainternet</a>
-          <a class="embiggen mdl-navigation__link" href="/portsandprotocols.html"> - Ports and Protocols</a>
-          <a class="embiggen mdl-navigation__link" href="/technologies.html"> - Technologies</a>
-          <a class="embiggen mdl-navigation__link" href="/testsainternet.html"> - Test Sainternet</a>
-          <a class="embiggen mdl-navigation__link" href="/reportaproblem.html"> - Report a Problem</a>
-          <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="embiggen mdl-navigation__link" href="/projects.html">Popular Projects</a>
+          <a class="embiggen mdl-navigation__link" href="frequentlyaskedquestions.html"> - FAQ</a>
+          <a class="embiggen mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
+          <a class="embiggen mdl-navigation__link" href="portsandprotocols.html"> - Ports and Protocols</a>
+          <a class="embiggen mdl-navigation__link" href="technologies.html"> - Technologies</a>
+          <a class="embiggen mdl-navigation__link" href="testsainternet.html"> - Test Sainternet</a>
+          <a class="embiggen mdl-navigation__link" href="reportaproblem.html"> - Report a Problem</a>
+          <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
+          <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
         </nav>
       </div>
       <div class="ribbon orange-ribbon"></div>
@@ -108,7 +108,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="/index.html">Home</a> &gt; <a class="embiggen" href="#filtereddns"><b>Filtered DNS</b></a><br><a class="embiggen" href="/frequentlyaskedquestions.html">FAQ</a>, <a class="embiggen" href="/connecttosainternet.html">Connect to Sainternet</a>, <a class="embiggen" href="/portsandprotocols.html">Ports and Protocols</a>, <a class="embiggen" href="/technologies.html">Technologies</a>, <a class="embiggen" href="/testsainternet.html">Test Sainternet</a>, <a class="embiggen" href="/reportaproblem.html">Report a Problem</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#filtereddns"><b>Filtered DNS</b></a><br><a class="embiggen" href="frequentlyaskedquestions.html">FAQ</a>, <a class="embiggen" href="connecttosainternet.html">Connect to Sainternet</a>, <a class="embiggen" href="portsandprotocols.html">Ports and Protocols</a>, <a class="embiggen" href="technologies.html">Technologies</a>, <a class="embiggen" href="testsainternet.html">Test Sainternet</a>, <a class="embiggen" href="reportaproblem.html">Report a Problem</a>
             </div>
           </div>
         </div>
@@ -117,7 +117,7 @@
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Filtered DNS</span></h3>
             <p>
-              Sainternet offers validating, recursive, caching, <i>mostly</i> specification compliant, filtered <a href="https://wikipedia.org/wiki/Domain_Name_System">DNS</a> servers with a zero logging policy, served over <a href="/portsandprotocols.html#portsandprotocols">all your favourite acronyms</a>.
+              Sainternet offers validating, recursive, caching, <i>mostly</i> specification compliant, filtered <a href="https://wikipedia.org/wiki/Domain_Name_System">DNS</a> servers with a zero logging policy, served over <a href="portsandprotocols.html#portsandprotocols">all your favourite acronyms</a>.
             </p>
             <p>
               Sainternet Filtered DNS blocks many domains known to be associated with unsavoury behaviours (including but not limited to advertising, botnets, malware, spam and telemetry), using a variety of methods updated regularly.
@@ -132,7 +132,7 @@
               <li>Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> and Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent them from bypassing Sainternet.</li>
             </ol>
             <p>
-              You can find information about the technologies used to power Sainternet Filtered DNS <a href="/technologies.html">here</a>.
+              You can find information about the technologies used to power Sainternet Filtered DNS <a href="technologies.html">here</a>.
             </p>
           </div>
         </div>
