--- a/frequentlyaskedquestions.html
+++ b/frequentlyaskedquestions.html
@@ -14,25 +14,25 @@
     <title>sainternet.xyz</title>
 
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" type="image/png" sizes="256x256" href="/resources/icons/android-chrome-256x256.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/resources/icons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-256x256.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-192x192.png">
 
-    <link rel="icon" type="image/png" sizes="48x48" href="/resources/icons/favicon-48x48.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/resources/icons/favicon-16x16.png">
-    <link rel="icon" sizes="any" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16x16.png">
+    <link rel="icon" sizes="any" href="favicon.ico">
 
     <link rel="canonical" href="https://sainternet.xyz/frequentlyaskedquestions.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', luxio, Luxio, pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
-    <link rel="preload" as="style" href="/resources/stylesheets/material.amber-red.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/material.amber-red.min.css">
-    <link rel="preload" as="style" href="/resources/stylesheets/sainternet.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/sainternet.min.css">
-    <link rel="preload" as="style" href="/resources/stylesheets/ribbons.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/ribbons.min.css">
-    <link rel="preload" as="style" href="/resources/stylesheets/button_home.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/button_home.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/material.amber-red.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/material.amber-red.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/sainternet.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/sainternet.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/ribbons.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/button_home.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/button_home.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,15 +41,15 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link rel="preload" as="style" href="/resources/fontawesome/css/fontawesome.min.css">
-    <link rel="stylesheet" href="/resources/fontawesome/css/fontawesome.min.css">
-    <link rel="preload" as="style" href="/resources/fontawesome/css/solid.min.css">
-    <link rel="stylesheet" href="/resources/fontawesome/css/solid.min.css">
-    <link rel="preload" as="style" href="/resources/fontawesome/css/brands.min.css">
-    <link rel="stylesheet" href="/resources/fontawesome/css/brands.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome/css/fontawesome.min.css">
+    <link rel="stylesheet" href="resources/fontawesome/css/fontawesome.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome/css/solid.min.css">
+    <link rel="stylesheet" href="resources/fontawesome/css/solid.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome/css/brands.min.css">
+    <link rel="stylesheet" href="resources/fontawesome/css/brands.min.css">
 
-    <script type="text/javascript" src="/resources/javascript/material.min.js" async></script>
-    <script type="text/javascript" src="/resources/javascript/sainternet.min.js" async></script>
+    <script type="text/javascript" src="resources/javascript/material.min.js" async></script>
+    <script type="text/javascript" src="resources/javascript/sainternet.min.js" async></script>
 
     <link rel="dns-prefetch" href="discord.gg">
     <link rel="dns-prefetch" href="github.com">
@@ -62,28 +62,28 @@
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="embiggen mdl-navigation__link" href="/index.html">Home</a>
-            <a class="embiggen mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
-            <a class="embiggen mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-            <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="embiggen mdl-navigation__link" href="/projects.html">Popular Projects</a>
+            <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
+            <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
+            <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
+            <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
+            <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer">
         <span class="embiggen mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
-          <a class="embiggen mdl-navigation__link" href="/index.html">Home</a>
-          <a class="embiggen mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
-          <a class="embiggen mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
+          <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
+          <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
+          <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="embiggen mdl-navigation__link" href="#frequentlyaskedquestions"> <b>- FAQ</b></a>
-          <a class="embiggen mdl-navigation__link" href="/connecttosainternet.html"> - Connect to Sainternet</a>
-          <a class="embiggen mdl-navigation__link" href="/portsandprotocols.html"> - Ports and Protocols</a>
-          <a class="embiggen mdl-navigation__link" href="/technologies.html"> - Technologies</a>
-          <a class="embiggen mdl-navigation__link" href="/testsainternet.html"> - Test Sainternet</a>
-          <a class="embiggen mdl-navigation__link" href="/reportaproblem.html"> - Report a Problem</a>
-          <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="embiggen mdl-navigation__link" href="/projects.html">Popular Projects</a>
+          <a class="embiggen mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
+          <a class="embiggen mdl-navigation__link" href="portsandprotocols.html"> - Ports and Protocols</a>
+          <a class="embiggen mdl-navigation__link" href="technologies.html"> - Technologies</a>
+          <a class="embiggen mdl-navigation__link" href="testsainternet.html"> - Test Sainternet</a>
+          <a class="embiggen mdl-navigation__link" href="reportaproblem.html"> - Report a Problem</a>
+          <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
+          <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
         </nav>
       </div>
       <div class="ribbon amber-ribbon"></div>
@@ -92,7 +92,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="/index.html">Home</a> &gt; <a class="embiggen" href="/filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a><br><a class="embiggen" href="#whowhatwhenwhereandwhy">Who, What, When, Where and Why?</a>, <a class="embiggen" href="#howmuch">How Much?</a>, <a class="embiggen" href="#howdoessainternetmakemoney">How does Sainternet Make Money?</a>, <a class="embiggen" href="#sowhofundssainternet">So, Who Funds Sainternet?</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a><br><a class="embiggen" href="#whowhatwhenwhereandwhy">Who, What, When, Where and Why?</a>, <a class="embiggen" href="#howmuch">How Much?</a>, <a class="embiggen" href="#howdoessainternetmakemoney">How does Sainternet Make Money?</a>, <a class="embiggen" href="#sowhofundssainternet">So, Who Funds Sainternet?</a>
             </div>
           </div>
         </div>
