--- a/404.html
+++ b/404.html
@@ -14,29 +14,29 @@
     <title>Pokémon #404</title>
 
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" type="image/png" sizes="256x256" href="/resources/icons/android-chrome-404-256x256.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/resources/icons/android-chrome-404-192x192.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-404-256x256.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-404-192x192.png">
 
-    <link rel="icon" type="image/png" sizes="48x48" href="/resources/icons/favicon-404-48x48.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-404-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/resources/icons/favicon-404-16x16.png">
-    <link rel="icon" sizes="any" href="/resources/icons/favicon-404.ico">
+    <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/favicon-404-48x48.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-404-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-404-16x16.png">
+    <link rel="icon" sizes="any" href="resources/icons/favicon-404.ico">
 
     <link rel="canonical" href="https://sainternet.xyz/404.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', luxio, Luxio, pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
-    <link rel="preload" as="style" href="/resources/stylesheets/material.light_blue-red.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/material.light_blue-red.min.css">
-    <link rel="preload" as="style" href="/resources/stylesheets/sainternet.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/sainternet.min.css">
-    <link rel="preload" as="style" href="/resources/stylesheets/ribbons.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/ribbons.min.css">
-    <link rel="preload" as="style" href="/resources/stylesheets/img.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/img.min.css">
-    <link rel="preload" as="style" href="/resources/stylesheets/pre.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/pre.min.css">
-    <link rel="preload" as="style" href="/resources/stylesheets/button_home.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/button_home.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/material.light_blue-red.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/material.light_blue-red.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/sainternet.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/sainternet.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/ribbons.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/img.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/img.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/pre.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/pre.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/button_home.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/button_home.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,21 +45,21 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link rel="preload" as="style" href="/resources/fontawesome/css/fontawesome.min.css">
-    <link rel="stylesheet" href="/resources/fontawesome/css/fontawesome.min.css">
-    <link rel="preload" as="style" href="/resources/fontawesome/css/solid.min.css">
-    <link rel="stylesheet" href="/resources/fontawesome/css/solid.min.css">
-    <link rel="preload" as="style" href="/resources/fontawesome/css/brands.min.css">
-    <link rel="stylesheet" href="/resources/fontawesome/css/brands.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome/css/fontawesome.min.css">
+    <link rel="stylesheet" href="resources/fontawesome/css/fontawesome.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome/css/solid.min.css">
+    <link rel="stylesheet" href="resources/fontawesome/css/solid.min.css">
+    <link rel="preload" as="style" href="resources/fontawesome/css/brands.min.css">
+    <link rel="stylesheet" href="resources/fontawesome/css/brands.min.css">
 
-    <link rel="preload" as="image" href="/resources/images/luxio.webp" type="image/webp">
-    <link rel="preload" as="image" href="/resources/images/luxio-shiny.webp" type="image/webp">
+    <link rel="preload" as="image" href="resources/images/luxio.webp" type="image/webp">
+    <link rel="preload" as="image" href="resources/images/luxio-shiny.webp" type="image/webp">
 
-    <script type="text/javascript" src="/resources/javascript/material.min.js" async></script>
-    <script type="text/javascript" src="/resources/javascript/sainternet.min.js" async></script>
+    <script type="text/javascript" src="resources/javascript/material.min.js" async></script>
+    <script type="text/javascript" src="resources/javascript/sainternet.min.js" async></script>
 
-    <link rel="prefetch" href="/265.html" as="document">
-    <link rel="prerender" href="/265.html">
+    <link rel="prefetch" href="265.html" as="document">
+    <link rel="prerender" href="265.html">
 
     <link rel="dns-prefetch" href="discord.gg">
     <link rel="dns-prefetch" href="github.com">
@@ -72,26 +72,26 @@
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="embiggen mdl-navigation__link" href="/index.html">Home</a>
-            <a class="embiggen mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
-            <a class="embiggen mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-            <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="embiggen mdl-navigation__link" href="/projects.html">Projects</a>
+            <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
+            <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
+            <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
+            <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
+            <a class="embiggen mdl-navigation__link" href="projects.html">Projects</a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer">
         <span class="embiggen mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
-          <a class="embiggen mdl-navigation__link" href="/index.html">Home</a>
-          <a class="embiggen mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
-          <a class="embiggen mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-          <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="embiggen mdl-navigation__link" href="/projects.html">Projects</a>
+          <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
+          <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
+          <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
+          <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
+          <a class="embiggen mdl-navigation__link" href="projects.html">Projects</a>
         </nav>
         <span class="embiggen mdl-layout-title">???</span>
         <nav class="mdl-navigation">
-          <a class="embiggen mdl-navigation__link" href="/265.html#pokemon265">???</a>
+          <a class="embiggen mdl-navigation__link" href="265.html#pokemon265">???</a>
           <a class="embiggen mdl-navigation__link" href="#pokemon404"><b>???</b></a>
         </nav>
       </div>
@@ -101,7 +101,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="/index.html">Home</a> &gt; <a class="embiggen" href="#pokemon404"><b>Pokémon #404</b></a><br><a class="embiggen" href="#example">Example Queries</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#pokemon404"><b>Pokémon #404</b></a><br><a class="embiggen" href="#example">Example Queries</a>
             </div>
           </div>
         </div>
@@ -110,8 +110,8 @@
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
             <picture>
-              <source srcset="/resources/images/luxio-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
-              <img src="/resources/images/luxio.webp" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
+              <source srcset="resources/images/luxio-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
+              <img src="resources/images/luxio.webp" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
             </picture>
             <p align="center">
               A wild <b>Luxio</b> appeared!
